--- a/index.html
+++ b/index.html
@@ -1,27 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<title>Testing</title>
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, </h1>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:ddd@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/ddd</a></li>
-			</ul>
-		</footer>
-	</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Home</title>
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
 </html>
