--- a/Chip8/index.html
+++ b/Chip8/index.html
@@ -1,3 +1,9 @@
 <html>
-  <h1>Test</h1>
+    <head>
+        <link rel="stylesheet" href="main.css">
+    </head>
+    <body>
+        <div id="root"></div>
+        <script src="main.js"></script>
+    </body>
 </html>
